--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,12 @@
 	"type": "library",
 	"description": "TCPDF is a PHP class for generating PDF documents.",
 	"license": "LGPLv3",
+    "authors": [
+        {
+            "name": "Leo Feyer",
+            "homepage": "https://github.com/leofeyer"
+        }
+    ],
 	"require": {
 		"php": ">=5.3.0"
 	},
