Add a trailing slash to the folder names in the Composer autoloader

--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
 	},
 	"autoload": {
 		"classmap": [
-			"fonts",
-			"config",
-			"include",
+			"fonts/",
+			"config/",
+			"include/",
 			"tcpdf.php",
 			"tcpdf_parser.php",
 			"tcpdf_import.php",
